2009-11-29  Daniel Bates  <dbates@webkit.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=31969

        Removes unnecessary #include files.

        No functionality was changed. So, no new tests.

        * css/CSSComputedStyleDeclaration.cpp: Removed include CachedImage.h, and
        Pair.h
        * css/CSSCursorImageValue.cpp: Removed include RenderStyle.h
        * css/CSSFontFaceSrcValue.cpp: Removed include Node.h
        * css/CSSFontSelector.cpp: Removed include NodeList.h
        * css/CSSGradientValue.cpp: Removed include GraphicsContext.h, ImageBuffer.h
        * css/CSSImageValue.cpp: Removed include RenderStyle.h
        * css/CSSImportRule.cpp: Removed include MediaList.h
        * css/CSSMutableStyleDeclaration.cpp: Removed include CSSProperty.h
        * css/CSSRule.cpp: Removed include CSSStyleSheet.h
        * css/CSSStyleSelector.cpp: Removed include CSSFontFace.h,
        CSSFontFaceSource.h, and CSSProperty.h
        * page/EventSource.h: Removed include EventListener.h

2009-11-29  Daniel Bates  <dbates@webkit.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=31965

        Removed #include KeyframeList.h from CSSStyleSelector.h. Instead,
        forward declared it.

        As a side effect, we need to #include KeyframeList.h in
        RenderLayerBacking.cpp.

        No functionality was changed. So, no new tests.

        * css/CSSStyleSelector.cpp:
        * css/CSSStyleSelector.h: Removed #include KeyframeList.h
        * rendering/RenderLayerBacking.cpp: Added #include KeyframeList.h

2009-11-29  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Eric Seidel.

        Continue to search for matching node in the case where multiple nodes
        have the same id.
        https://bugs.webkit.org/show_bug.cgi?id=31428

        Test: fast/dom/Element/id-in-node-list-index01.html

        * dom/DynamicNodeList.cpp: